fixed application z-index

--- a/css/style.css
+++ b/css/style.css
@@ -117,15 +117,13 @@ a {
   background: url(banner-mobile.webp);
   background-repeat: no-repeat;
   background-size: cover;
-  height: calc(100vh - 6.1rem);
   position: relative;
-  height: 60rem;
+  height: 62rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
   width: 100%;
-  z-index: -2;
   margin-bottom: 2rem;
 }
 
@@ -151,6 +149,7 @@ a {
     rgba(23, 26, 60, 0.3) 95%
   );
   border-radius: 2rem;
+  z-index: 2;
 }
 
 .application__text {
@@ -177,6 +176,7 @@ a {
 .application .btn {
   width: 22.2rem;
   text-align: center;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 768px) {
@@ -209,7 +209,7 @@ a {
   position: absolute;
   bottom: -40%;
   left: -100%;
-  z-index: -1;
+  z-index: 1;
   transition: 0.3s;
 }
 
